--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/merchandize/category/view.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/merchandize/category/view.html
@@ -2,18 +2,18 @@
 <html
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"	
-	layout:decorate="~{portal/layout/popup/index_mall}">
+	layout:decorate="~{portal/layout/iv/eu/parts/popup/index}">
 
 <th:block layout:fragment="content">
 
 <div class="block-header">
-	<div class="block-title" th:text="#{DIVEU_LB_0068}"></div>	<!-- Category Details -->
+	<div class="block-title" th:text="#{EUP_L_0068}"></div>	<!-- Category Details -->
 	<div class="block-button-area">		
-		<button class="catModBtn" th:text="#{DIVEU_BTN_0022}"></button>
+		<button class="catModBtn" th:text="#{EUP_B_0022}"></button>
 		<div class="split"></div>
-		<button class="catDelBtn" th:text="#{DIVEU_BTN_0010}"></button>  <!-- Delete -->
+		<button class="catDelBtn" th:text="#{EUP_B_0010}"></button>  <!-- Delete -->
 		<div class="split"></div>
-		<button class="catLisBtn" th:text="#{DIVEU_BTN_0004}"></button>  <!-- Back -->
+		<button class="catLisBtn" th:text="#{EUP_B_0004}"></button>  <!-- Back -->
 	</div>
 </div>
 
@@ -25,37 +25,37 @@
 	<table class="mallcondition">
 		<tbody>
 			<tr>
-				<th th:text="#{DIVEU_LB_0063}"></th>	<!-- Category -->
+				<th th:text="#{EUP_L_0063}"></th>	<!-- Category -->
 				<td th:text="${categoryDto.categoryCode}"></td>
 			</tr>
 			<tr th:each="langDto : ${categoryLangDtos}">
 								
-				<th th:text="|#{DIVEU_LB_0064}(${langDto.name})|"></th>	<!-- Category Name -->
+				<th th:text="|#{EUP_L_0064}(${langDto.name})|"></th>	<!-- Category Name -->
 				<!-- 				<th>Category Name(<span th:text="${langDto.name}"></span>)</th> -->
 				<td th:text="${langDto.text}"></td>					
 			</tr>			
 			<tr>
-				<th th:text="#{DIVEU_LB_0065}"></th>	<!-- Sort -->
+				<th th:text="#{EUP_L_0065}"></th>	<!-- Sort -->
 				<td th:text="${categoryDto.sort}"></td>
 			</tr>
 			<tr>
-				<th th:text="#{DIVEU_LB_0066}"></th>	<!-- Display Y/N -->
+				<th th:text="#{EUP_L_0066}"></th>	<!-- Display Y/N -->
 				<td th:text="${categoryDto.fgDisplay}"></td>
 			</tr>
 			<tr>
-				<th th:text="#{DIVEU_LB_0069}"></th>	<!-- Reg.User -->
+				<th th:text="#{EUP_L_0069}"></th>	<!-- Reg.User -->
 				<td th:text="${categoryDto.regUsername}"></td>
 			</tr>
 			<tr>
-				<th th:text="#{DIVEU_LB_0070}"></th>	<!-- Reg.Date -->
+				<th th:text="#{EUP_L_0070}"></th>	<!-- Reg.Date -->
 				<td th:text="${#temporals.format(categoryDto.regDate, 'yyyy.MM.dd')}"></td>
 			</tr>
 			<tr>
-				<th th:text="#{DIVEU_LB_0071}"></th>	<!-- Mod.User -->
+				<th th:text="#{EUP_L_0071}"></th>	<!-- Mod.User -->
 				<td th:text="${categoryDto.modUsername}"></td>
 			</tr>
 			<tr>
-				<th th:text="#{DIVEU_LB_0072}"></th>	<!-- Mod.Date -->
+				<th th:text="#{EUP_L_0072}"></th>	<!-- Mod.Date -->
 				<td th:text="${#temporals.format(categoryDto.modDate, 'yyyy.MM.dd')}"></td>
 			</tr>
 			
@@ -64,22 +64,22 @@
 	
 </form>
 
-<form id="FORM_modify" method="post" action="/portal/corp/eu/scm/parts/merchandize/category/modify">
+<form id="FORM_modify" method="post" action="[[${BASE_PATH}]]/merchandize/category/modify">
 	<input type="hidden" name="mcSeq" th:value="${categoryDto.mcSeq}" />
 </form>
 
-<form id="FORM_delete" method="post" action="/portal/corp/eu/scm/parts/merchandize/category/delete">
+<form id="FORM_delete" method="post" action="[[${BASE_PATH}]]/merchandize/category/delete">
 	<input type="hidden" name="mcSeq" th:value="${categoryDto.mcSeq}" />
 </form>
 
-<form id="FORM_main" method="post" action="/portal/corp/eu/scm/parts/merchandize/category/main_admin"></form>
+<form id="FORM_main" method="post" action="[[${BASE_PATH}]]/merchandize/category/main_admin"></form>
 
 </div>
 
 <script type="application/javascript">
 $(document).ready(function() 
 {
-// 	$('#DIV_mallTitle').text( '[[#{DIVEU_LB_0068}]]' );	// Category Details
+// 	$('#DIV_mallTitle').text( '[[#{EUP_L_0068}]]' );	// Category Details
 });
 
 function makeCategoryNameFieldArea() 
@@ -111,7 +111,7 @@ $('.catDelBtn').click(function()
 	{
 		$.ajax(
 		{
-		    url:'/portal/corp/eu/scm/parts/merchandize/category/delete',
+		    url:'[[${BASE_PATH}]]/merchandize/category/delete',
 		    type:'post', 
 			data: $("#FORM_delete").serialize(),
 		    success: function(data) 
